Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19172

Limit radix nodes to GENRADIX_NODE_SIZE (512 bytes)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Medium
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      Linux commit v6.8-rc6-113-g3a319a2476d2
      lib/generic-radix-tree.c: Make nodes more reasonably sized

      Sets the maximum size of GENRADIX_NODE_SIZE to 512 bytes

      Shrink users to avoid BUILD_BUG_ON():
      In function ‘__idx_to_offset’,
      inlined from ‘lustre_targets_dump’ at .../kernelcomm.c:525:9:
      ././include/linux/compiler_types.h:536:45: error: call to
      '__compiletime_assert_323' declared with attribute error:
      BUILD_BUG_ON failed: obj_size > GENRADIX_NODE_SIZE

      Attachments

        Activity

          People

            stancheff Shaun Tancheff
            stancheff Shaun Tancheff
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: