LU-19172 build: limit lu_tgt_list to GENRADIX_NODE_SIZE

Linux commit v6.8-rc6-113-g3a319a2476d2
  lib/generic-radix-tree.c: Make nodes more reasonably sized

Sets the maximum size of GENRADIX_NODE_SIZE to 512 bytes

BUILD_BUG_ON():
  In function '__idx_to_offset',
    inlined from 'lustre_targets_dump' at .../kernelcomm.c:525:9:
      ././include/linux/compiler_types.h:536:45: error: call to
      '__compiletime_assert_323' declared with attribute error:
        BUILD_BUG_ON failed: obj_size > GENRADIX_NODE_SIZE

Test-Parameters: trivial
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I0de7587318ae97ff6de973dd9c41b90c58876f50